welcome.lessons.welcome.methods.slug.SlugHunting.scala.error
SlugHunting:3: error: illegal start of simple expression
    while (isFacingTrail()) {while (!estSurBiscuit())) {avance();baisseBrosse();leveBrosse()};gauche()};prendBiscuit()
                                                     ^