welcome.lessons.welcome.methods.slug.SlugHunting.scala.code
def hunt() {
    while (isFacingTrail()) {while (!estSurBiscuit())) {avance();baisseBrosse();leveBrosse()};gauche()};prendBiscuit()
}

def isFacingTrail():Boolean = {if (!estFaceMur()){avance(); if (getCouleurSol() == Color.green) {recule();return true} else {recule();return false }} else {return false}
}